// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expands more options 1`] = `
<div
  className="text-center"
>
  <a
    className="small text-muted js-more-options"
    href="#"
    onClick={[Function]}
  >
    login.more_options
  </a>
</div>
`;

exports[`expands more options 2`] = `
<form
  className="login-form"
  onSubmit={[Function]}
>
  <Connect(GlobalMessages) />
  <div
    className="big-spacer-bottom"
  >
    <label
      className="login-label"
      htmlFor="login"
    >
      login
    </label>
    <input
      autoFocus={true}
      className="login-input"
      id="login"
      maxLength={255}
      name="login"
      onChange={[Function]}
      placeholder="login"
      required={true}
      type="text"
      value=""
    />
  </div>
  <div
    className="big-spacer-bottom"
  >
    <label
      className="login-label"
      htmlFor="password"
    >
      password
    </label>
    <input
      className="login-input"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="password"
      required={true}
      type="password"
      value=""
    />
  </div>
  <div>
    <div
      className="text-right overflow-hidden"
    >
      <DeferredSpinner
        className="spacer-right"
        loading={false}
        timeout={100}
      />
      <SubmitButton
        disabled={false}
      >
        sessions.log_in
      </SubmitButton>
      <a
        className="spacer-left"
        href="/"
      >
        cancel
      </a>
    </div>
  </div>
</form>
`;

exports[`logs in with simple credentials 1`] = `
<form
  className="login-form"
  onSubmit={[Function]}
>
  <Connect(GlobalMessages) />
  <div
    className="big-spacer-bottom"
  >
    <label
      className="login-label"
      htmlFor="login"
    >
      login
    </label>
    <input
      autoFocus={true}
      className="login-input"
      id="login"
      maxLength={255}
      name="login"
      onChange={[Function]}
      placeholder="login"
      required={true}
      type="text"
      value=""
    />
  </div>
  <div
    className="big-spacer-bottom"
  >
    <label
      className="login-label"
      htmlFor="password"
    >
      password
    </label>
    <input
      className="login-input"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="password"
      required={true}
      type="password"
      value=""
    />
  </div>
  <div>
    <div
      className="text-right overflow-hidden"
    >
      <DeferredSpinner
        className="spacer-right"
        loading={false}
        timeout={100}
      />
      <SubmitButton
        disabled={false}
      >
        sessions.log_in
      </SubmitButton>
      <a
        className="spacer-left"
        href="/"
      >
        cancel
      </a>
    </div>
  </div>
</form>
`;

exports[`should display a spinner and disabled button while loading 1`] = `
<form
  className="login-form"
  onSubmit={[Function]}
>
  <Connect(GlobalMessages) />
  <div
    className="big-spacer-bottom"
  >
    <label
      className="login-label"
      htmlFor="login"
    >
      login
    </label>
    <input
      autoFocus={true}
      className="login-input"
      id="login"
      maxLength={255}
      name="login"
      onChange={[Function]}
      placeholder="login"
      required={true}
      type="text"
      value="admin"
    />
  </div>
  <div
    className="big-spacer-bottom"
  >
    <label
      className="login-label"
      htmlFor="password"
    >
      password
    </label>
    <input
      className="login-input"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="password"
      required={true}
      type="password"
      value="admin"
    />
  </div>
  <div>
    <div
      className="text-right overflow-hidden"
    >
      <DeferredSpinner
        className="spacer-right"
        loading={true}
        timeout={100}
      />
      <SubmitButton
        disabled={true}
      >
        sessions.log_in
      </SubmitButton>
      <a
        className="spacer-left"
        href="/"
      >
        cancel
      </a>
    </div>
  </div>
</form>
`;
